lots of updates

--- a/portfolio/src/Header.css
+++ b/portfolio/src/Header.css
@@ -1,7 +1,7 @@
 .background-main{
-    background-color: rgb(219, 99, 99);
+    background-color: #db6363;
 }
 
 .background-inner{
-    background-color: rgb(159, 65, 65);
+    background-color: #9f4141;
 }
